--- a/src/base.css
+++ b/src/base.css
@@ -5,9 +5,6 @@
 @tailwind utilities;
 
 .main-panel h1 {
-  width: 100%;
-  text-align: center;
-  font-family: sans-serif;
-  font-weight: 600;
-  color: crimson;
+  @apply bg-white mt-12
 }
+
